welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:23: error: type mismatch;
 found   : String
 required: Int
			setCouleurBrosse(table(k+b));
                                                ^